--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
     <div class="container">
       <div class="row">
         <div class="col-6">
-          <img src="images/yoga.png" class="img-fluid rounded index_photos" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid rounded d-none d-sm-block"
+            id="index_photos"
+          />
         </div>
-        <div class="col-6">
-          <h2 class="mb-3">Yoga app</h2>
+        <div class="col-sm-6">
+          <h2 class="mb-3" id="index_apps">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -72,13 +76,13 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link project-link">Launch Yoga App</a>
           </div>
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
-          <h2 class="mb-3">Weather app</h2>
+        <div class="col-sm-6">
+          <h2 class="mb-3" id="index_apps">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -86,22 +90,27 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link project-link">Launch Weather App</a>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-sm-6">
           <img
             src="images/weather.png"
-            class="img-fluid rounded index_photos"
+            class="img-fluid rounded d-none d-sm-block"
+            id="index_photos"
           />
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
-          <img src="images/yogurt.png" class="img-fluid rounded index_photos" />
+        <div class="col-sm-6">
+          <img
+            src="images/yogurt.png"
+            class="img-fluid rounded d-none d-sm-block"
+            id="index_photos"
+          />
         </div>
-        <div class="col-6">
-          <h2 class="mb-3">Yogurt app</h2>
+        <div class="col-sm-6">
+          <h2 class="mb-3" id="index_apps">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -109,7 +118,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link project-link">Launch Weather App</a>
           </div>
         </div>
       </div>
