--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Ginelle Doubek</a>
+        <a class="navbar-brand" href="/">Ginelle Doubek</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
+              <a class="nav-link active" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -63,19 +63,19 @@
       <div class="row">
         <div class="col-sm-4">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             class="img-fluid p-2 shadow rounded about_photos"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             class="img-fluid p-2 shadow rounded about_photos"
           />
         </div>
         <div class="col-sm-4">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             class="img-fluid p-2 shadow rounded about_photos"
           />
         </div>
