--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Ginelle Doubek</a>
+        <a class="navbar-brand" href="/">Ginelle Doubek</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,15 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a class="nav-link" href="/about.html#contact">Contact me</a>
             </li>
           </ul>
         </div>
@@ -55,14 +53,14 @@
     <h1 class="text-center">Ginelle Doubek</h1>
     <h3 class="text-center">Front-end developer, based in Switzerland</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="/about.html#contact" class="primary-link">Contact me</a>
+      <a href="/about.html" class="secondary-link">About me</a>
     </div>
     <div class="container">
       <div class="row">
         <div class="col-6">
           <img
-            src="images/yoga.png"
+            src="/images/yoga.png"
             class="img-fluid rounded d-none d-sm-block"
             id="index_photos"
           />
@@ -95,7 +93,7 @@
         </div>
         <div class="col-sm-6">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             class="img-fluid rounded d-none d-sm-block"
             id="index_photos"
           />
@@ -104,7 +102,7 @@
       <div class="row mt-5">
         <div class="col-sm-6">
           <img
-            src="images/yogurt.png"
+            src="/images/yogurt.png"
             class="img-fluid rounded d-none d-sm-block"
             id="index_photos"
           />
