--- a/about.html
+++ b/about.html
@@ -22,7 +22,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/">Ginelle Doubek</a>
+        <a class="navbar-brand" href="/" title="Ginelle Doubek"
+          >Ginelle Doubek</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -37,13 +39,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Home</a>
+              <a class="nav-link" aria-current="page" href="/" title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/about.html">About me</a>
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="About Ginelle Doubek"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Ginelle Doubek"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
