--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/">Ginelle Doubek</a>
+        <a class="navbar-brand" href="/" title="Ginelle Doubek"
+          >Ginelle Doubek</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -37,13 +39,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About me</a>
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Ginelle Doubek"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Ginelle Doubek"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
@@ -53,8 +71,15 @@
     <h1 class="text-center">Ginelle Doubek</h1>
     <h3 class="text-center">Front-end developer, based in Switzerland</h3>
     <div class="navigation-links mb-5">
-      <a href="/about.html#contact" class="primary-link">Contact me</a>
-      <a href="/about.html" class="secondary-link">About me</a>
+      <a
+        href="/about.html#contact"
+        class="primary-link"
+        title="Contact Ginelle Doubek"
+        >Contact me</a
+      >
+      <a href="/about.html" class="secondary-link" title="About Ginelle Doubek"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
@@ -63,6 +88,7 @@
             src="/images/yoga.png"
             class="img-fluid rounded d-none d-sm-block"
             id="index_photos"
+            alt="yoga project"
           />
         </div>
         <div class="col-sm-6">
@@ -96,6 +122,7 @@
             src="/images/weather.png"
             class="img-fluid rounded d-none d-sm-block"
             id="index_photos"
+            alt="weather project"
           />
         </div>
       </div>
@@ -105,6 +132,7 @@
             src="/images/yogurt.png"
             class="img-fluid rounded d-none d-sm-block"
             id="index_photos"
+            alt="yogurt project"
           />
         </div>
         <div class="col-sm-6">
