--- a/about.html
+++ b/about.html
@@ -79,18 +79,21 @@
           <img
             src="/images/yoga.png"
             class="img-fluid p-2 shadow rounded about_photos"
+            alt="yoga project"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/weather.png"
             class="img-fluid p-2 shadow rounded about_photos"
+            alt="weather project"
           />
         </div>
         <div class="col-sm-4">
           <img
             src="/images/yogurt.png"
             class="img-fluid p-2 shadow rounded about_photos"
+            alt="yogurt project"
           />
         </div>
       </div>
